# agentic-expense-reporting-system

./: .gitignore  01-system-overview.md  02-bug-fix.md  03-human-review.md  04-eu-privacy.md  05-extend-workflow.md  06-cost-drivers.md  README.md  architecture.md  playbook-evaluation.md
diagrams/: architecture-vertical.mmd
implementation/: README.md  pyproject.toml
implementation/examples/: org.json  policy.json
implementation/examples/fixtures/: bigflight_clear.json  dinner_unreadable.json  flight_clear.json  gift_clear.json  hotel_clear.json  lunch_blurry.json  taxi_clear.json
implementation/examples/reports/: blurry_receipt.json  conflict_report.json  eu_resident.json  gift_highrisk.json  huge_trip.json  large_trip.json  small_trip.json  unreadable_receipt.json
implementation/src/expense_pipeline/: __init__.py  __main__.py  cli.py  cost.py  directory.py  human_review.py  models.py  orchestrator.py  payment.py  policy.py  privacy.py
implementation/src/expense_pipeline/agents/: __init__.py  agent1_extract.py  agent2_policy.py  agent3_decision.py
implementation/src/expense_pipeline/extractors/: __init__.py  base.py  mock.py
implementation/tests/: conftest.py  test_cost_report.py  test_end_to_end.py  test_step2_validation.py  test_step3_human_review.py  test_step4_privacy.py  test_step5_four_eyes.py
